SyntacticAnalyzer/tests/fail/sentencia-while.java
class foo {

	ctor (int n1)
	var boolean b1;
	var int n2,n3,b4;
	{
		// una sentencia no es una asignacion
		while (n1=n2){

	 	}
	}
}
